<resources>
    <string name="app_name">Thirty</string>
    <string name="round_one">Round 1</string>
    <string name="three_throws_left">3 Throws left</string>
    <string name="tap_the_dice">Tap the dice you want to keep</string>
    <string name="option_button">Option</string>
    <string name="throw_button">Throw</string>
    <string name="add_combination_button">Add Combination</string>
    <string name="keep_all_continue_button">Keep all and continue</string>
    <string name="combinations_not_needed">Low: combinations not needed, as all dice below 4 give points</string>
    <string name="total_sum">Total Sum: 0</string>
    <string name="result">Result</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="Low">Low</string>
    <string name="Four">4</string>
    <string name="Five">5</string>
    <string name="Six">6</string>
    <string name="Seven">7</string>
    <string name="Eight">8</string>
    <string name="Nine">9</string>
    <string name="Ten">10</string>
    <string name="Eleven">11</string>
    <string name="Twelve">12</string>

    <string name="first_dice">this is the first dice</string>
    <string name="second_dice">this is the second dice</string>
    <string name="third_dice">this is the third dice</string>
    <string name="fourth_dice">this is the fourth dice</string>
    <string name="fifth_dice">this is the fifth dice</string>
    <string name="sixth_dice">this is the sixth dice</string>
    
    <string name="play_again">Play again</string>
</resources>