<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="always"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/round_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dongle_regular"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/round_one"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/throws_left_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dongle_regular"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/three_throws_left"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/round_text_view" />

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/throws_left_text_view">

                <ImageButton
                    android:id="@+id/dice1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/first_dice"
                    android:paddingEnd="4dp"
                    android:paddingBottom="4dp"
                    app:srcCompat="@drawable/white1"
                    tools:ignore="RtlSymmetry" />

                <ImageButton
                    android:id="@+id/dice2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/second_dice"
                    android:paddingBottom="4dp"
                    app:srcCompat="@drawable/white2" />

                <ImageButton
                    android:id="@+id/dice3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/third_dice"
                    android:paddingStart="4dp"
                    android:paddingBottom="4dp"
                    app:srcCompat="@drawable/white3"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

                <ImageButton
                    android:id="@+id/dice4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/fourth_dice"
                    android:paddingEnd="4dp"
                    app:srcCompat="@drawable/white4"
                    tools:ignore="RtlSymmetry" />

                <ImageButton
                    android:id="@+id/dice5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/fifth_dice"
                    app:srcCompat="@drawable/white5" />

                <ImageButton
                    android:id="@+id/dice6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/sixth_dice"
                    android:paddingStart="4dp"
                    app:srcCompat="@drawable/white6"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>

            <TextView
                android:id="@+id/tap_the_dice_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dongle_regular"
                android:gravity="center_vertical|center_horizontal"
                android:padding="24dp"
                android:text="@string/tap_the_dice"
                android:textColor="#689F38"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tap_the_dice_text_view">

                <Button
                    android:id="@+id/option_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:drawableEnd="@drawable/expand_more"
                    android:drawablePadding="3dp"
                    android:fontFamily="@font/dongle_regular"
                    android:text="@string/option_button"
                    android:textSize="20sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/throw_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/dongle_regular"
                    android:text="@string/throw_button"
                    android:textSize="20sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/add_combination_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/dongle_regular"
                    android:text="@string/add_combination_button"
                    android:textSize="20sp"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

            <TextView
                android:id="@+id/combinations_not_needed_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dongle_regular"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/combinations_not_needed"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <RadioButton
                    android:id="@+id/radioButton_low"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Low" />

                <RadioButton
                    android:id="@+id/radioButton_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Four" />

                <RadioButton
                    android:id="@+id/radioButton_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Five" />

                <RadioButton
                    android:id="@+id/radioButton_6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Six" />

                <RadioButton
                    android:id="@+id/radioButton_7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Seven" />

                <RadioButton
                    android:id="@+id/radioButton_8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Eight" />

                <RadioButton
                    android:id="@+id/radioButton_9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Nine" />

                <RadioButton
                    android:id="@+id/radioButton_10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Ten" />

                <RadioButton
                    android:id="@+id/radioButton_11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Eleven" />

                <RadioButton
                    android:id="@+id/radioButton_12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Twelve" />
            </RadioGroup>

            <LinearLayout
                android:id="@+id/combinations_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <Button
                android:id="@+id/continue_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/dongle_regular"
                android:text="@string/keep_all_continue_button"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

            <TextView
                android:id="@+id/total_sum_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dongle_regular"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/total_sum"
                android:textColor="@color/black"
                android:textSize="35sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/continue_button"
                app:layout_constraintVertical_bias="0.0" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>